fix header menu z-index bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -392,7 +392,9 @@ h3 {
             top: -50px;
             left: 0px;
             background: none;
+            @media only screen and (max-width: 1680px) {
             z-index: -1;
+          }
           }
           @media only screen and (max-width:1024px) {
             display: none !important;
